<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/news_error_header_footer_bad_internet_image"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:contentDescription="@string/bad_internet_image"
        android:src="@drawable/ic_signal_cellular_connected_no_internet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <TextView
        android:id="@+id/news_error_header_footer_bad_internet_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/no_internet_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news_error_header_footer_bad_internet_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/news_error_header_footer_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/retry"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/news_error_header_footer_bad_internet_text_view"
        app:layout_constraintStart_toStartOf="@+id/news_error_header_footer_bad_internet_text_view"
        app:layout_constraintTop_toBottomOf="@+id/news_error_header_footer_bad_internet_text_view" />


    <ProgressBar
        android:id="@+id/news_error_header_footer_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/news_error_header_footer_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="news_error_header_footer_bad_internet_image, news_error_header_footer_bad_internet_text_view, news_error_header_footer_retry" />
</androidx.constraintlayout.widget.ConstraintLayout>