<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.home.HomeFragment">

    <TextView
        android:id="@+id/home_fragment_dummy_view_pager_title"
        style="@style/HomeFragmentViewPagerDummyTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/home_fragment_view_pager_headlines"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:clipToPadding="false"
        android:foregroundGravity="center"
        android:overScrollMode="never"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_dummy_view_pager_title">

    </androidx.viewpager.widget.ViewPager>

    <TextView
        android:id="@+id/home_fragment_see_all_headlines"
        style="@style/HomeFragmentViewPagerDummySeeAllStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/home_fragment_dummy_view_pager_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_fragment_dummy_view_pager_title" />

    <ImageView
        android:id="@+id/home_fragment_headline_bad_internet_image"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/bad_internet_image"
        android:src="@drawable/ic_signal_cellular_connected_no_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_fragment_view_pager_headlines" />

    <TextView
        android:id="@+id/home_fragment_headlines_bad_internet_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/no_internet_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_headline_bad_internet_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_fragment_headlines_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/retry"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/home_fragment_headlines_bad_internet_text_view"
        app:layout_constraintStart_toStartOf="@+id/home_fragment_headlines_bad_internet_text_view"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_headlines_bad_internet_text_view" />

    <ProgressBar
        android:id="@+id/home_fragment_headlines_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/home_fragment_view_pager_headlines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_fragment_headline_bad_internet_image"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/error_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="home_fragment_headline_bad_internet_image, home_fragment_headlines_bad_internet_text_view, home_fragment_headlines_retry"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>